--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             height: 400px;
             padding: 20px;
             background-color: #fff;
-            border: black 1px;
+            border: 1px solid black;
             border-radius: 25px;
             display: flex;
             flex-direction: row;
